public/stylesheets/heypal.less
/* ... */
// User Information
// ----------------

.user_info {
  diplay:       block;
  clear:        left;
  margin:       10px 10px;

  .label_detail {
    padding-top:  6px;
    padding-left: 10px;
    font-size:    14px;
    line-height:  20px;
    float:        left;
    width:        190px;
    display:      inline-block;
    margin-left:  20px;
  }

  .user_detail {
    display:        inline-block;
    width:          200px;
    height:         20px;
    padding:        4px;
    font-size:      14px;
    line-height:    20px;
    padding-right:  10px;
  }
}

// Availabilities
// --------------
h4.year-header {
  padding-left:15px;
  background-color:#046CB6;
  color:#EEE;
}
.availabilities-block {
  border:3px solid grey;
  margin:10px;

  .availability-color {
    float:right;
    width:15px;
    height:64px;
    display:inline-block;

    &.red { background-color:#C43C35; }
    &.blue { background-color:#049CDA; }
    &.green { background-color:#3977b0; }
    &.grey { background-color:#BBB; }
  }

  .data-container {
    padding:25px 0;

    span {
      padding-left:25px;
    }
  }

  &:hover .open-edit-availability {
    display:inline;
  }

  .edit-data-container {
    margin:0 0 5px 10px;
  }
}
.availability-price {
  padding-left:30px;
}
.availability-price .wrap {
  margin-left:10px;
}
.availability-action {
  margin-top:10px;
  text-align:right;
  padding-right:100px;

  .remove-action {
    float:left;
  }
}

// Indicator

.save-indicator {
  margin-left: 5px;

  &.right {
    float:right;
  }
}

.counter {
  margin-left: 5px;
  color: @gray;
}

// Photos List

.primary_marker {
  margin-left: 30px;
  font-weight: bold;
  color: @gray;
}

.photo_wrapper {
  .active-photo {
    text-align: center;
  }
}
ul#photos_list { 
  list-style-type: none; 
  margin: 0; 
  padding: 0;

  li {
    cursor:pointer;
    margin: 3px 3px 30px 0;
    padding: 8px 8px 10px 8px;
    float: left;
    font-size: 4em;
    text-align: center;
    width:115px;

    .photo_image {
      margin-bottom: 15px;
      width:106px;
      height:70px;
      border: 1px solid #000;
      background-color: #F2F2F2;
      padding:3px;
    }

    .photo_action {
      font-size: 13px;
      z-index:999;
      display:none;
      position:absolute;
      margin-left:95px;
      margin-top:-10px;

      a {
        cursor:pointer;
        color:red;
        font-weight:bold;
        font-size:13px;

        &:hover {
          text-decoration:none;
        }
      }
    }
  }
  li.active {
    .photo_image {
    }
  }
}

// Wizard
h1.title {
  margin-bottom: 0;
}

h2.title {
  background: @grayLight;
  padding: 5px 20px ;
  width: 50%;
  text-align: right;

}

.preview-button {
  width: 120px;
  text-align: center;
}

#listing-status {
  margin-right: 35px;
}

/* @start uploadify */
.uploadifyQueueItem {
	background-color: #F5F5F5;
	border: 2px solid #E5E5E5;
	font-family: helvetica, arial;
	font: 14px;
	margin-top: 5px;
	padding: 10px;
	width: 95%;
}

.uploadifyError {
	background-color: #FDE5DD!important;
	border: 2px solid #FBCBBC!important;
}

.uploadifyQueueItem .cancel {
	float: right;
}

.uploadifyQueue .completed {
	background-color: #E5E5E5;
}

.uploadifyProgress {
	background-color: #E5E5E5;
	margin-top: 10px;
	width: 100%;
}

.uploadifyProgressBar {
	height: 30px;
	width: 1px;
	background-image: -webkit-gradient(linear,leftbottom,lefttop,color-stop(0.02,rgb(79,153,21)), color-stop(0.51,rgb(111,184,49)), color-stop(0.76,rgb(145,221,79)) );
	background-image: -moz-linear-gradient(centerbottom,rgb(79,153,21) 2% #6fb831 51% #91dd4f 76% );
}

// Form Error
// -----------

.formError .formErrorContent {
	width: 100%;
	background: @red;
	position:relative;
	z-index:5001;
	color: @grayLight;
	width: 150px;
	font-size: 12px;
	border: 2px solid #ddd;
  .border-radius(4px);
  .box-shadow(0 1px 1px rgba(0,0,0,.095));
	padding: 4px 10px 4px 10px;
}

.formError .formErrorArrow div {
  background: @red;
}

a[rel="twipsy"], a[rel="twipsy-link"]  {
  border:1px solid;
  border-radius:5px;
  margin-left:10px;
  line-height:1;
  padding:0 2px;

  &:hover {
    text-decoration:none;
  }
}

.twipsy-inner {
  text-align:left !important;
}

.w-left-icon {
  padding-left:20px;
  background-repeat:no-repeat;
  background-position:left center;

  &.check {
    background-image:url(../images/icons/icon.check.png);
  }
  &.ekis {
    background-image:url(../images/icons/icon.ekis.png);
  }
}

pre.desc {
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
  background-color:#FFF;
  border:none;
}


#map {
  height: 400px !important;
  width: 690px !important;
}
/* ... */

